Release 8.24 Date: Apr 5, 2020   Refactor the Java query system to make it flexible, extendable.     Include query, potentially subquery, desc, title, errors (if applicable).   Refinement to getRecentCASPinnedPonerinaeQueryReport()